Experimental haml of previous commit (user page) - please correct.

--- a/webmocks/alt_design2/user-name.html
+++ b/webmocks/alt_design2/user-name.html
@@ -67,28 +67,28 @@
                                 some other variant
                             </div>
                             <div class="trophyright">
-                                <a href='../../public/trophies#m-astral' title='entered Astral Plane'>
+                                <a href='../../public/trophies#m-astral' title='entered Astral Plane' class="imagelink">
                                     <img src='../../public/icons/m-astral.png' />
                                 </a>
-                                <a href='/../../publictrophies#m-planes' title='entered Elemental Planes'>
+                                <a href='/../../publictrophies#m-planes' title='entered Elemental Planes' class="imagelink">
                                     <img src='../../public/icons/m-planes.png' />
                                 </a>
-                                <a href='../../public/trophies#m-gehennom' title='entered Gehennom'>
+                                <a href='../../public/trophies#m-gehennom' title='entered Gehennom' class="imagelink">
                                     <img src='../../public/icons/m-gehennom.png' />
                                 </a>
-                                <a href='../../public/trophies#m-bell' title='obtained the Bell of Opening'>
+                                <a href='../../public/trophies#m-bell' title='obtained the Bell of Opening' class="imagelink">
                                     <img src='../../public/icons/m-bell.png' />
                                 </a>
-                                <a href='../../public/trophies#m-amulet' title='obtained the Amulet of Yendor'>
+                                <a href='../../public/trophies#m-amulet' title='obtained the Amulet of Yendor' class="imagelink">
                                     <img src='../../public/icons/m-amulet.png' />
                                 </a>
-                                <a href='../../public/trophies#m-book' title='obtained the Book of the Dead'>
+                                <a href='../../public/trophies#m-book' title='obtained the Book of the Dead' class="imagelink">
                                     <img src='../../public/icons/m-book.png' />
                                 </a>
-                                <a href='../../public/trophies#m-candelabrum' title='obtained the Candelabrum of Invocation'>
+                                <a href='../../public/trophies#m-candelabrum' title='obtained the Candelabrum of Invocation' class="imagelink">
                                     <img src='../../public/icons/m-candelabrum.png' />
                                 </a>
-                                <a href='../../public/trophies#m-invocation' title='performed the Invocation Ritual'>
+                                <a href='../../public/trophies#m-invocation' title='performed the Invocation Ritual' class="imagelink">
                                     <img src='../../public/icons/m-invocation.png' />
                                 </a>
                             </div>
@@ -98,28 +98,28 @@
                                 NetHack 3.4.3
                             </div>
                             <div class="trophyright">
-                                <a href='../../public/trophies#m-astral' title='entered Astral Plane'>
+                                <a href='../../public/trophies#m-astral' title='entered Astral Plane' class="imagelink">
                                     <img src='../../public/icons/m-astral.png' />
                                 </a>
-                                <a href='/../../publictrophies#m-planes' title='entered Elemental Planes'>
+                                <a href='/../../publictrophies#m-planes' title='entered Elemental Planes' class="imagelink">
                                     <img src='../../public/icons/m-planes.png' />
                                 </a>
-                                <a href='../../public/trophies#m-gehennom' title='entered Gehennom'>
+                                <a href='../../public/trophies#m-gehennom' title='entered Gehennom' class="imagelink">
                                     <img src='../../public/icons/m-gehennom.png' />
                                 </a>
-                                <a href='../../public/trophies#m-bell' title='obtained the Bell of Opening'>
+                                <a href='../../public/trophies#m-bell' title='obtained the Bell of Opening' class="imagelink">
                                     <img src='../../public/icons/m-bell.png' />
                                 </a>
-                                <a href='../../public/trophies#m-amulet' title='obtained the Amulet of Yendor'>
+                                <a href='../../public/trophies#m-amulet' title='obtained the Amulet of Yendor' class="imagelink">
                                     <img src='../../public/icons/m-amulet.png' />
                                 </a>
-                                <a href='../../public/trophies#m-book' title='obtained the Book of the Dead'>
+                                <a href='../../public/trophies#m-book' title='obtained the Book of the Dead' class="imagelink">
                                     <img src='../../public/icons/m-book.png' />
                                 </a>
-                                <a href='../../public/trophies#m-candelabrum' title='obtained the Candelabrum of Invocation'>
+                                <a href='../../public/trophies#m-candelabrum' title='obtained the Candelabrum of Invocation' class="imagelink">
                                     <img src='../../public/icons/m-candelabrum.png' />
                                 </a>
-                                <a href='../../public/trophies#m-invocation' title='performed the Invocation Ritual'>
+                                <a href='../../public/trophies#m-invocation' title='performed the Invocation Ritual' class="imagelink">
                                     <img src='../../public/icons/m-invocation.png' />
                                 </a>
                             </div>
