wait, wasn't unnecessary after all. still dunno why that a has height.

--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -105,6 +105,19 @@
                     <a href="" class="imagelink" title="here is a trophy">
                       <img src="" alt="a trophy" />
                     </a>
+                    <a href="" class="imagelink" title="here is a trophy">
+                      <img src="" alt="a trophy" />
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="trophyleft">
+                    Here is a variant name
+                  </div>
+                  <div class="trophyright">
+                    <a href="" class="imagelink" title="here is a trophy">
+                      <img src="" alt="a trophy" />
+                    </a>
                   </div>
                 </li>
               </ul>
