webmock implementation of .greytable

--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -41,7 +41,7 @@
               Hi xaiph, to have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># junethack2011 xaiph</tt><br/> to your options file on the public server and enter your public server account name (case-sensitive) into the form below.
             </div>
             <form action='/add_server_account' method='post'>
-              <table id='accountlist'>
+              <table id='accountlist' class="greytable">
                 <tr>
                   <th>Server</th>
                   <th>Account</th>
