--- a/webmocks/alt_design2/user-name.html
+++ b/webmocks/alt_design2/user-name.html
@@ -42,7 +42,7 @@
                 | 165 Games Played
                 </h2>
                 <form action='/add_server_account' method='post'>
-                <table id='accountlist'>
+                <table id='accountlist' class="greytable">
                     <tr>
                     <th>Server</th>
                     <th>Account</th>
