--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -1186,7 +1186,7 @@
           <div class='text_content non_top_post'>
             <h3>Last 50 games played</h3>
             <div class='scorelisting'>
-              <table style='width: 100%;'>
+              <table class="greytable">
                 <tr>
                   <th>Name</th>
                   <th>Variant</th>
