every html table should now have .greytable

--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -129,7 +129,7 @@
             </h2>
             <h4>NetHack 3.4.3</h4>
             <div class='scorelisting'>
-              <table>
+              <table class="greytable">
                 <tr>
                   <th>Competition</th>
                   <th></th>
@@ -165,7 +165,7 @@
               </table>
             </div>
             <div class='scorelisting'>
-              <table>
+              <table class="greytable">
                 <tr>
                   <th>Trophies</th>
                 </tr>
@@ -175,7 +175,7 @@
           <div class='text_content non_top_post'>
             <h2>Games you've played</h2>
             <div class='scorelisting'>
-              <table style='width: 100%;'>
+              <table class="greytable">
                 <tr>
                   <th>Name</th>
                   <th>Variant</th>
@@ -3122,7 +3122,7 @@
                 invitation(s)
               </p>
               <div class='scorelisting'>
-                <table>
+                <table class="greytable">
                   <tr>
                     <th>Clan</th>
                     <th>Accept</th>
