--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -49,7 +49,7 @@
               Highest Score
             </h3>
             <div class='scorelisting'>
-              <table>
+              <table class="greytable">
                 <tr>
                   <th>
                     Clan
@@ -1703,7 +1703,7 @@
               Most ascensions
             </h3>
             <div class='scorelisting'>
-              <table>
+              <table class="greytable">
                 <tr>
                   <th>Name</th>
                   <th>Ascensions</th>
