--- a/webmocks/alt_design2/user-name.html
+++ b/webmocks/alt_design2/user-name.html
@@ -141,7 +141,7 @@
             <div class='text_content non_top_post'>
             <h3>Games played</h3>
                             <div class='scorelisting'>
-                              <table style='width: 100%;'>
+                              <table class="greytable">
                                 <tr>
                                   <th>Name</th>
                                   <th>Variant</th>
