PARTLY implemented haml changes. Please do not merge - this commit is incomplete.  Please see .html for target appearance.

--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -41,13 +41,10 @@
               Scoreboard
             </h1>
           </div>
-          <div class='text_content non_top_post'>
+          <div class='text_content'>
             <h2>
               Clan Competition
             </h2>
-            <h3>
-              Highest Score
-            </h3>
             <div class='scorelisting'>
               <table class="greytable">
                 <tr>
@@ -1184,7 +1181,7 @@
             </div>
           </div>
           <div class='text_content non_top_post'>
-            <h3>Last 50 games played</h3>
+            <h2>Last 50 games played</h2>
             <div class='scorelisting'>
               <table class="greytable">
                 <tr>
@@ -1699,9 +1696,9 @@
             </div>
           </div>
           <div class='text_content non_top_post'>
-            <h3>
+            <h2>
               Most ascensions
-            </h3>
+            </h2>
             <div class='scorelisting'>
               <table class="greytable">
                 <tr>
