Rename realtime and gametime to wall-clock time and turns

--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -133,11 +133,11 @@
                   <td class='table_number'>0</td>
                 </tr>
                 <tr id='cell2'>
-                  <td>Fastest ascension (gametime)</td>
+                  <td>Fastest ascension (by turns)</td>
                   <td class='table_number'></td>
                 </tr>
                 <tr id='cell1'>
-                  <td>Fastest ascension (realtime)</td>
+                  <td>Fastest ascension (by wall-clock time)</td>
                   <td class='table_number'></td>
                 </tr>
                 <tr id='cell2'>
