Fix is now for a#flattr.imagelink and its contained img.

--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -1701,7 +1701,7 @@
           -
           <a href='/trophies'>Trophies</a>
           ]
-          <a href='http://flattr.com/thing/345872/Junethack-Nethack-Tournament' target='_blank' id="flattr">
+          <a href='http://flattr.com/thing/345872/Junethack-Nethack-Tournament' target='_blank' id="flattr" class="imagelink">
             <img alt='Flattr this' border='0' src='http://api.flattr.com/button/flattr-badge-large.png' title='Flattr this' />
           </a>
         </footer>
