Restyled navigation lots - may need more.

--- a/webmocks/alt_design2/activity.html
+++ b/webmocks/alt_design2/activity.html
@@ -15,7 +15,7 @@
             Navigation
           </h1>
           <ul>
-            <li>
+            <li class="first">
               <a href='/'>
                 <img alt='Logo' src='../../public/vivid_divider.png' />
               </a>
