--- a/webmocks/alt_design2/servers.html
+++ b/webmocks/alt_design2/servers.html
@@ -14,9 +14,9 @@
             Navigation
           </h1>
           <ul>
-            <li>
+            <li class="first">
               <a href='/'>
-                <img alt='Logo' src='../../public/vivid_divider.png' />
+                <img alt='Logo' src='../../public/vivid_divider2.png' />
               </a>
             </li>
             <li>
