Shuffled around more styles and tested new image in mockup

--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -15,9 +15,9 @@
             Navigation
           </h1>
           <ul>
-            <li>
+            <li class="first">
               <a href='/'>
-                <img alt='Logo' src='../../public/vivid_divider.png' />
+                <img alt='Logo' src='../../public/vivid_divider2.png' />
               </a>
             </li>
             <li>
