Turned #topnav img into a {background-image}

--- a/webmocks/alt_design2/servers.html
+++ b/webmocks/alt_design2/servers.html
@@ -16,7 +16,9 @@
           <ul>
             <li class="first">
               <a href='/'>
-                <img alt='Logo' src='../../public/vivid_divider2.png' />
+                <span>
+                  Home
+                </span>
               </a>
             </li>
             <li>
