--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -14,8 +14,12 @@
             Navigation
           </h1> 
           <ul> 
-            <li class='current_nav_page'> 
-              <a href='#'>Home</a> 
+            <li class='current_nav_page first'>
+              <a href='#'>
+                <span>
+                  Home
+                </span>
+              </a> 
             </li> 
             <li> 
               <a href='/login'>Login</a> 
