--- a/webmocks/alt_design2/activity.html
+++ b/webmocks/alt_design2/activity.html
@@ -17,7 +17,7 @@
           <ul>
             <li class="first">
               <a href='/'>
-                <img alt='Logo' src='../../public/vivid_divider.png' />
+                <img alt='Home' src='../../public/vivid_divider.png' />
               </a>
             </li>
             <li>
