Tested image in most other variations of mockups.

--- a/webmocks/alt_design2/servers.html
+++ b/webmocks/alt_design2/servers.html
@@ -16,9 +16,7 @@
           <ul>
             <li class="first">
               <a href='/'>
-                <span>
-                  Home
-                </span>
+                <img alt='Home' src='../../public/vivid_divider2.png' />
               </a>
             </li>
             <li>
