--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -2,7 +2,7 @@
 <html> 
   <head> 
     <meta content='application/xhtml+xml;charset=utf-8' http-equiv='content-type' /> 
-    <link href='style-xiella.css' rel='stylesheet' type='text/css' /> 
+    <link href='../../public/style-xiella.css' rel='stylesheet' type='text/css' /> 
     <title>Junethack</title> 
   </head> 
   <body> 
@@ -16,9 +16,7 @@
           <ul> 
             <li class='current_nav_page first'>
               <a href='#'>
-                <span>
-                  Home
-                </span>
+                <img alt='Home' src='../../public/vivid_divider.png' />
               </a> 
             </li> 
             <li> 
