--- a/webmocks/alt_design2/servers.html
+++ b/webmocks/alt_design2/servers.html
@@ -16,7 +16,7 @@
           <ul>
             <li class="first">
               <a href='/'>
-                <img alt='Home' src='../../public/vivid_divider2.png' />
+                <img alt='Home' src='../../public/vivid_divider.png' />
               </a>
             </li>
             <li>
