Added a .main to main nav. Check home.html for rudimentary hover menu - no idea why it's displaying below the rest of the content.

--- a/webmocks/alt_design2/activity.html
+++ b/webmocks/alt_design2/activity.html
@@ -14,7 +14,7 @@
           <h1>
             Navigation
           </h1>
-          <ul>
+          <ul class="main">
             <li class="first">
               <a href='/'>
                 <img alt='Home' src='../../public/vivid_divider.png' />
