--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -13,7 +13,7 @@
           <h1>
             Navigation
           </h1>
-          <ul>
+          <ul class="main">
             <li class="first">
               <a href='/'>
                 <img alt='Home' src='../../public/vivid_divider.png' />
@@ -26,7 +26,22 @@
               <a href='/scoreboard'>Scoreboard</a>
             </li>
             <li>
-              <a href='/logout'>Logout</a>
+              <a href='/scoreboard'>Logout</a>
+            </li>
+            <li>
+              <a href='/statistics'>Statistics</a>
+              <ul>
+                <li class="first">
+                  <a href="/games">
+                    Onea oeua oeu snat oehusnnaot nshu
+                  </a>
+                </li>
+                <li>
+                  <a href="/ascensions">
+                    Two
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
           <span class='clear'></span>
