--- a/webmocks/alt_design2/splash.html
+++ b/webmocks/alt_design2/splash.html
@@ -13,7 +13,7 @@
           <h1> 
             Navigation
           </h1> 
-          <ul> 
+          <ul class="main"> 
             <li class='current_nav_page first'>
               <a href='#'>
                 <img alt='Home' src='../../public/vivid_divider.png' />
