--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -13,7 +13,7 @@
           <h1>
             Navigation
           </h1>
-          <ul>
+          <ul class="main">
             <li class="first">
               <a href='/'>
                 <img alt='Logo' src='../../public/vivid_divider.png' />
