--- a/webmocks/alt_design2/login.html
+++ b/webmocks/alt_design2/login.html
@@ -2,7 +2,7 @@
 <html> 
   <head> 
     <meta content='application/xhtml+xml;charset=utf-8' http-equiv='content-type' /> 
-    <link href='style-xiella.css' rel='stylesheet' type='text/css' /> 
+    <link href='../../public/style-xiella.css' rel='stylesheet' type='text/css' /> 
     <title>Junethack</title> 
   </head> 
   <body> 
@@ -13,9 +13,11 @@
           <h1> 
             Navigation
           </h1> 
-          <ul> 
-            <li> 
-              <a href='/'>Home</a> 
+          <ul class="main"> 
+            <li class="first"> 
+              <a href='/'>
+                <img alt='Home' src='../../public/vivid_divider.png' />
+              </a> 
             </li> 
             <li class='current_nav_page'> 
               <a href='#'>Login</a> 
