--- a/webmocks/alt_design2/scoreboard.html
+++ b/webmocks/alt_design2/scoreboard.html
@@ -14,7 +14,7 @@
           <h1>
             Navigation
           </h1>
-          <ul>
+          <ul class="main">
             <li class="first">
               <a href='/'>
                 <img alt='Home' src='../../public/vivid_divider.png' />
