--- a/webmocks/alt_design2/servers.html
+++ b/webmocks/alt_design2/servers.html
@@ -13,7 +13,7 @@
           <h1>
             Navigation
           </h1>
-          <ul>
+          <ul class="main">
             <li class="first">
               <a href='/'>
                 <img alt='Home' src='../../public/vivid_divider.png' />
@@ -27,6 +27,9 @@
             </li>
             <li>
               <a href='/about'>Help</a>
+            </li>
+            <li>
+              <a href='/statistics'>Statistics</a>
             </li>
           </ul>
           <span class='clear'></span>
