Menu arrow with li.long(er|est) ul and li.short(er|est) ul, also transparent bg with fallback for imageless browsing.

--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -28,7 +28,7 @@
             <li>
               <a href='/scoreboard'>Logout</a>
             </li>
-            <li>
+            <li class="short">
               <a href='/statistics'>Statistics</a>
               <ul>
                 <li class="first">
