--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -41,6 +41,11 @@
                     Two
                   </a>
                 </li>
+                <li>
+                  <a href="/games">
+                    Three
+                  </a>
+                </li>
               </ul>
             </li>
           </ul>
