Added a css comment for future reference.

--- a/webmocks/alt_design2/home.html
+++ b/webmocks/alt_design2/home.html
@@ -33,7 +33,7 @@
               <ul>
                 <li class="first">
                   <a href="/games">
-                    Onea oeua oeu snat oehusnnaot nshu
+                    One
                   </a>
                 </li>
                 <li>
