Style clanpage trophies to appear in a trophycabinet

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -74,17 +74,21 @@
               </div>
               <span class='clear'></span>
             </div>
-            <div id='clan_trophies'>
+            <div id='clan_trophies' class="trophycabinet">
               <h2>
                 Clan trophies
               </h2>
+              <ul>
               <!-- TODO: trophy image for clan competition winner -->
-              <a class='imagelink' href='/trophies#clan-points' title='most_points'>
-                <img src='../../public/icons/clan-points.png' class="trophyicon" />
-              </a>
-              <a class='imagelink' href='/trophies#clan-variant-trophies' title='most_variant_trophy_combinations'>
-                <img src='../../public/icons/clan-variant-trophies.png' class="trophyicon" />
-              </a>
+                <li>
+                  <a class='imagelink' href='/trophies#clan-points' title='most_points'>
+                    <img src='../../public/icons/clan-points.png' class="trophyicon" />
+                  </a>
+                  <a class='imagelink' href='/trophies#clan-variant-trophies' title='most_variant_trophy_combinations'>
+                    <img src='../../public/icons/clan-variant-trophies.png' class="trophyicon" />
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
           <div class='text_content non_top_post' id='clan_members'>
