Don't require ul > li for trophycabinet

--- a/webmocks/alt_design2/clan-name.html
+++ b/webmocks/alt_design2/clan-name.html
@@ -78,17 +78,14 @@
               <h2>
                 Clan trophies
               </h2>
-              <ul>
               <!-- TODO: trophy image for clan competition winner -->
-                <li>
-                  <a class='imagelink' href='/trophies#clan-points' title='most_points'>
-                    <img src='../../public/icons/clan-points.png' class="trophyicon" />
-                  </a>
-                  <a class='imagelink' href='/trophies#clan-variant-trophies' title='most_variant_trophy_combinations'>
-                    <img src='../../public/icons/clan-variant-trophies.png' class="trophyicon" />
-                  </a>
-                </li>
-              </ul>
+              <a class='imagelink' href='/trophies#clan-points' title='most_points'>
+                <img src='../../public/icons/clan-points.png' class="trophyicon" />
+              </a>
+              <a class='imagelink' href='/trophies#clan-variant-trophies' title='most_variant_trophy_combinations'>
+                <img src='../../public/icons/clan-variant-trophies.png' class="trophyicon" />
+              </a>
+              <span class="clear endofcabinetrow"></span>
             </div>
           </div>
           <div class='text_content non_top_post' id='clan_members'>
