--- a/icons/working/trophies.html
+++ b/icons/working/trophies.html
@@ -3,6 +3,7 @@
   <head>
     <meta content='application/xhtml+xml;charset=utf-8' http-equiv='content-type'>
     <link href='../../public/style-xiella.css' rel='stylesheet' type='text/css'>
+    <link href='../../style-xiella.css' rel='stylesheet' type='text/css'>
     <title>Junethack - 629 players registered - 8840 games played!</title>
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Junethack" />
