Add new icons to static example page

--- a/icons/working/trophies.html
+++ b/icons/working/trophies.html
@@ -167,13 +167,13 @@
                   </span>
                 </li>
                 <li id='prince'>
-                  <img alt='' src='../prince.png' style='vertical-align:middle'>
+                  <img alt='' src='4princeoftheworld_2_prince.png' style='vertical-align:middle'>
                   <span>
                     Prince of the World: ascend in half of the variants.
                   </span>
                 </li>
                 <li id='king'>
-                  <img alt='' src='../king.png' style='vertical-align:middle'>
+                  <img alt='' src='4princeoftheworld_3_king.png' style='vertical-align:middle'>
                   <span>
                     King of the World: ascend in all variants.
                   </span>
@@ -309,6 +309,57 @@
                 </li>
                 <li id='hemi-stoner'>
                   <img alt='' src='1hemistoner_6.png' style='vertical-align:middle'>
+                  <span>
+                    Hemi-Stoner: defeat Medusa in half of the variants.
+                  </span>
+                </li>
+                <li id='anti-stoner'>
+                  <img alt='' src='../anti-stoner.png' style='vertical-align:middle'>
+                  <span>
+                    Anti-Stoner: defeat Medusa in all variants.
+                  </span>
+                </li>
+                <li id='prince'>
+                  <img alt='' src='../prince.png' style='vertical-align:middle'>
+                  <span>
+                    Prince of the World: ascend in half of the variants.
+                  </span>
+                </li>
+                <li id='king'>
+                  <img alt='' src='../king.png' style='vertical-align:middle'>
+                  <span>
+                    King of the World: ascend in all variants.
+                  </span>
+                </li>
+              </ul>
+              <div class='text_content non_top_post'></div>
+              <ul class='trophypage'>
+                <li id='walk_in_the_park'>
+                  <img alt='' src='../backpacking_tourist.png' style='vertical-align:middle'>
+                  <span>
+                    Walk in the Park: finish a game in half of the variants (played for at least 1000 turns).
+                  </span>
+                </li>
+                <li id='sightseeing'>
+                  <img alt='' src='../sightseeing.png' style='vertical-align:middle'>
+                  <span>
+                    Sightseeing Tour: finish a game in all variants (played for at least 1000 turns).
+                  </span>
+                </li>
+                <li id='backpacking_tourist'>
+                  <img alt='' src='../backpacking_tourist.png' style='vertical-align:middle'>
+                  <span>
+                    Backpacking Tourist: get a trophy for half of the variants.
+                  </span>
+                </li>
+                <li id='globetrotter'>
+                  <img alt='' src='../globetrotter.png' style='vertical-align:middle'>
+                  <span>
+                    Globetrotter: get a trophy for each variant.
+                  </span>
+                </li>
+                <li id='hemi-stoner'>
+                  <img alt='' src='1hemistoner_7.png' style='vertical-align:middle'>
                   <span>
                     Hemi-Stoner: defeat Medusa in half of the variants.
                   </span>
