--- a/icons/working/example_icons.html
+++ b/icons/working/example_icons.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="" xmlns:og='http://ogp.me/ns#'>
+<html class="view_wide" xmlns:og='http://ogp.me/ns#'>
   <head>
     <meta content='application/xhtml+xml;charset=utf-8' http-equiv='content-type'>
     <title>Junethack - 629 players registered - 8840 games played!</title>
@@ -77,6 +77,10 @@ body {
 #container {
   width: 800px;
   margin-left: 150px;
+  margin-bottom: 50px;
+}
+.trophy {
+  position: relative;
 }
 .trophy_end {
   display: block;
@@ -94,20 +98,40 @@ body {
   color: #eee;
 }
 .icon {
+  cursor:help;
   display:block;
   height: 54px;
   width: 54px;
   margin-top: 5px;
+  vertical-align: top;
 }
 .non-existent {
   background-image: url("../undefined_light.png");
   background-color: #aef;
   display: inline-block;
 }
+img.preferred, .preferred {
+  padding-right: 5px;
+  border-right: 10px solid #000;
+}
 .view_compact .icon,
 .view_wide .icon {
   display:inline-block;
   margin-right: 5px;
+}
+.view_compact img.icon,
+.view_wide img.icon{
+  padding: 0 0 5px 0;
+  border-right: 0;
+  border-bottom: 10px solid transparent;
+}
+.view_wide img.preferred, .view_wide .preferred {
+  padding-bottom: 5px;
+  border-bottom: 10px solid #000;
+}
+.view_compact img.preferred, .view_compact .preferred {
+  padding-bottom: 3px;
+  border-bottom: 6px solid #000;
 }
 .view_compact .divider,
 .view_wide .divider {
@@ -166,68 +190,68 @@ function change_class(link){
         <div class="trophy">
           <h3> Walk in the Park </h3>
           <span class="previous_cabinet cabinet">
-            <div class="non-existent icon"></div>
+            <div title="non-existent" class="non-existent icon"></div>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="3walkinthepark_1.png" class="icon"/>
-            <img src="3walkinthepark_2.png" class="icon"/>
-            <img src="3walkinthepark_3.png" class="icon"/>
+            <img title="3walkinthepark_1.png" src="3walkinthepark_1.png" class="icon"/>
+            <img title="3walkinthepark_2.png" src="3walkinthepark_2.png" class="icon"/>
+            <img title="3walkinthepark_3.png" src="3walkinthepark_3.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
         <div class="trophy">
           <h3> Sightseeing Tour </h3>
           <span class="previous_cabinet cabinet">
-            <img src="../sightseeing.png" class="icon"/>
+            <img title="../sightseeing.png" src="../sightseeing.png" class="icon"/>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="../sightseeing.png" class="icon"/>
-            <img src="3walkinthepark_2_matching_sightseeingtour.png" class="icon"/>
+            <img title="../sightseeing.png" src="../sightseeing.png" class="icon"/>
+            <img title="3walkinthepark_2_matching_sightseeingtour.png" src="3walkinthepark_2_matching_sightseeingtour.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
         <div class="trophy">
           <h3> Backpacking Tourist </h3>
           <span class="previous_cabinet cabinet">
-            <div class="non-existent icon"></div>
+            <div title="non-existent" class="non-existent icon"></div>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="2backpackingtourist_1.png" class="icon"/>
-            <img src="2backpackingtourist_2.png" class="icon"/>
-            <img src="2backpackingtourist_3.png" class="icon"/>
-            <img src="2backpackingtourist_4.png" class="icon"/>
-            <img src="2backpackingtourist_5.png" class="icon"/>
+            <img title="2backpackingtourist_1.png" src="2backpackingtourist_1.png" class="icon"/>
+            <img title="2backpackingtourist_2.png" src="2backpackingtourist_2.png" class="preferred icon"/>
+            <img title="2backpackingtourist_3.png" src="2backpackingtourist_3.png" class="icon"/>
+            <img title="2backpackingtourist_4.png" src="2backpackingtourist_4.png" class="icon"/>
+            <img title="2backpackingtourist_5.png" src="2backpackingtourist_5.png" class="icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
         <div class="trophy">
           <h3> Globetrotter </h3>
           <span class="previous_cabinet cabinet">
-            <img src="../globetrotter.png" class="icon"/>
+            <img title="../globetrotter.png" src="../globetrotter.png" class="icon"/>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="../globetrotter.png" class="icon"/>
+            <img title="../globetrotter.png" src="../globetrotter.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
         <div class="trophy">
           <h3> Hemi-stoner </h3>
           <span class="previous_cabinet cabinet">
-            <div class="non-existent icon"></div>
+            <div title="non-existent" class="non-existent icon"></div>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="1hemistoner_1.png" class="icon"/>
-            <img src="1hemistoner_2.png" class="icon"/>
-            <img src="1hemistoner_3.png" class="icon"/>
-            <img src="1hemistoner_4.png" class="icon"/>
-            <img src="1hemistoner_5.png" class="icon"/>
-            <img src="1hemistoner_6.png" class="icon"/>
-            <img src="1hemistoner_7.png" class="icon"/>
+            <img title="1hemistoner_1.png" src="1hemistoner_1.png" class="icon"/>
+            <img title="1hemistoner_2.png" src="1hemistoner_2.png" class="icon"/>
+            <img title="1hemistoner_3.png" src="1hemistoner_3.png" class="icon"/>
+            <img title="1hemistoner_4.png" src="1hemistoner_4.png" class="icon"/>
+            <img title="1hemistoner_5.png" src="1hemistoner_5.png" class="preferred icon"/>
+            <img title="1hemistoner_6.png" src="1hemistoner_6.png" class="icon"/>
+            <img title="1hemistoner_7.png" src="1hemistoner_7.png" class="icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
@@ -238,19 +262,19 @@ function change_class(link){
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="../anti-stoner.png" class="icon"/>
+            <img src="../anti-stoner.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
         <div class="trophy">
           <h3> Prince of the World </h3>
           <span class="previous_cabinet cabinet">
-            <div class="non-existent icon"></div>
+            <div title="non-existent" class="non-existent icon"></div>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="4princeoftheworld_1_prince.png" class="icon"/>
-            <img src="4princeoftheworld_2_prince.png" class="icon"/>
+            <img title="4princeoftheworld_1_prince.png" src="4princeoftheworld_1_prince.png" class="icon"/>
+            <img title="4princeoftheworld_2_prince.png" src="4princeoftheworld_2_prince.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
@@ -262,9 +286,9 @@ function change_class(link){
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
             <img src="../old-king.png" class="icon"/>
-            <img src="4princeoftheworld_1_king.png" class="icon"/>
-            <img src="4princeoftheworld_2_king.png" class="icon"/>
-            <img src="4princeoftheworld_3_king.png" class="icon"/>
+            <img title="4princeoftheworld_1_king.png" src="4princeoftheworld_1_king.png" class="icon"/>
+            <img title="4princeoftheworld_2_king.png" src="4princeoftheworld_2_king.png" class="icon"/>
+            <img title="4princeoftheworld_3_king.png" src="4princeoftheworld_3_king.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
