Updated newest trophy images and moved some old icons to icons/old

--- a/icons/working/example_icons.html
+++ b/icons/working/example_icons.html
@@ -203,11 +203,11 @@ function change_class(link){
         <div class="trophy">
           <h3> Sightseeing Tour </h3>
           <span class="previous_cabinet cabinet">
-            <img title="../sightseeing.png" src="../sightseeing.png" class="icon"/>
+            <img title="../old/old-sightseeing.png" src="../old/old-sightseeing.png" class="icon"/>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img title="../sightseeing.png" src="../sightseeing.png" class="icon"/>
+            <img title="../old/old-sightseeing.png" src="../old/old-sightseeing.png" class="icon"/>
             <img title="3walkinthepark_2_matching_sightseeingtour.png" src="3walkinthepark_2_matching_sightseeingtour.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
@@ -258,11 +258,11 @@ function change_class(link){
         <div class="trophy">
           <h3> Anti-stoner </h3>
           <span class="previous_cabinet cabinet">
-            <img src="../anti-stoner.png" class="icon"/>
+            <img title="../anti-stoner.png" src="../anti-stoner.png" class="icon"/>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="../anti-stoner.png" class="preferred icon"/>
+            <img title="../anti-stoner.png" src="../anti-stoner.png" class="preferred icon"/>
           </span>
           <span class="trophy_end"></span>
         </div>
@@ -281,11 +281,11 @@ function change_class(link){
         <div class="trophy">
           <h3> King of the World </h3>
           <span class="previous_cabinet cabinet">
-            <img src="../old-king.png" class="icon"/>
+            <img title="../old/old-king.png" src="../old/old-king.png" class="icon"/>
           </span>
           <span class="cabinet divider">&rarr;</span>
           <span class="proposed_cabinet cabinet">
-            <img src="../old-king.png" class="icon"/>
+            <img title="../old/old-king.png" src="../old/old-king.png" class="icon"/>
             <img title="4princeoftheworld_1_king.png" src="4princeoftheworld_1_king.png" class="icon"/>
             <img title="4princeoftheworld_2_king.png" src="4princeoftheworld_2_king.png" class="icon"/>
             <img title="4princeoftheworld_3_king.png" src="4princeoftheworld_3_king.png" class="preferred icon"/>
